<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/add_account_api_key"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	tools:context=".fragment.AddAccountApiKeyFragment">

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<android.support.constraint.Guideline
			android:id="@+id/guideline"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			app:layout_constraintGuide_percent="0.5" />

		<TextView
			android:id="@+id/information"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/margin"
			android:layout_marginEnd="@dimen/margin"
			android:layout_marginStart="@dimen/margin"
			android:layout_marginTop="@dimen/margin"
			android:text="@string/api_key_information"
			android:textAppearance="@style/TextAppearance.AppCompat.Body1"
			app:layout_constraintBottom_toTopOf="@+id/api_key_layout"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<android.support.design.widget.TextInputLayout
			android:id="@+id/api_key_layout"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/margin_half"
			android:hint="@string/api_key"
			app:layout_constraintBottom_toTopOf="@+id/guideline"
			app:layout_constraintEnd_toEndOf="@+id/information"
			app:layout_constraintStart_toStartOf="@+id/information">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/api_key"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:imeOptions="actionNext"
				android:inputType="text">

				<requestFocus />
			</android.support.design.widget.TextInputEditText>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/secret_layout"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/margin"
			android:layout_marginTop="@dimen/margin_half"
			android:hint="@string/secret"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="@+id/api_key_layout"
			app:layout_constraintStart_toStartOf="@+id/api_key_layout"
			app:layout_constraintTop_toBottomOf="@+id/guideline"
			app:layout_constraintVertical_bias="0">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/secret"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:imeOptions="actionGo"
				android:inputType="text" />
		</android.support.design.widget.TextInputLayout>

		<Button
			android:id="@+id/back"
			style="@style/Widget.AppCompat.Button.Borderless.Colored"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/margin"
			android:text="@string/back"
			app:layout_constraintBaseline_toBaselineOf="@+id/next"
			app:layout_constraintStart_toStartOf="parent" />

		<Button
			android:id="@+id/next"
			style="@style/Widget.AppCompat.Button.Colored"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/margin"
			android:layout_marginEnd="@dimen/margin"
			android:text="@string/next"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent" />
	</android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
