<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@+id/menu_prices"
		android:icon="@drawable/ic_prices"
		android:title="@string/prices" />

	<item
		android:id="@+id/menu_positions"
		android:icon="@drawable/ic_positions"
		android:title="@string/positions" />

	<item
		android:id="@+id/menu_account"
		android:icon="@drawable/ic_account"
		android:title="@string/account" />
</menu>
