<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/add_account_check_information"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	tools:context=".fragment.AddAccountCheckInformationFragment">

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<android.support.constraint.Guideline
			android:id="@+id/guideline"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			app:layout_constraintGuide_percent="0.5" />

		<ProgressBar
			android:id="@+id/progress"
			style="@style/Widget.AppCompat.ProgressBar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<ImageView
			android:id="@+id/status"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="gone"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:ignore="ContentDescription"
			tools:src="@drawable/ic_cancel"
			tools:tint="@color/ask"
			tools:visibility="visible" />

		<TextView
			android:id="@+id/status_text"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/margin"
			android:layout_marginEnd="@dimen/margin"
			android:layout_marginStart="@dimen/margin"
			android:gravity="center_horizontal"
			android:textAppearance="@style/TextAppearance.AppCompat.Body1"
			android:visibility="gone"
			app:layout_constraintBottom_toTopOf="@+id/status"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			tools:text="@string/connection_error"
			tools:visibility="visible" />

		<Button
			android:id="@+id/login_now"
			style="@style/Widget.AppCompat.Button.Colored"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/margin_half"
			android:layout_marginEnd="@dimen/margin"
			android:layout_marginStart="@dimen/margin"
			android:text="@string/login_now"
			android:visibility="gone"
			app:layout_constraintBottom_toTopOf="@+id/guideline"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			tools:visibility="visible" />

		<Button
			android:id="@+id/save_account"
			style="@style/Widget.AppCompat.Button.Colored"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/margin_half"
			android:text="@string/save_account"
			android:visibility="gone"
			app:layout_constraintEnd_toEndOf="@+id/login_now"
			app:layout_constraintStart_toStartOf="@+id/login_now"
			app:layout_constraintTop_toBottomOf="@+id/guideline"
			tools:visibility="visible" />

		<Button
			android:id="@+id/back"
			style="@style/Widget.AppCompat.Button.Borderless.Colored"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/margin"
			android:layout_marginStart="@dimen/margin"
			android:text="@string/back"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent" />
	</android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
