<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/add_account_save_account"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	tools:context=".fragment.AddAccountSaveAccountFragment">

	<android.support.constraint.ConstraintLayout
...
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/margin"
			android:layout_marginEnd="@dimen/margin"
			android:layout_marginStart="@dimen/margin"
			android:layout_marginTop="@dimen/margin"
			android:textAppearance="@style/TextAppearance.AppCompat.Body1"
			app:layout_constraintBottom_toTopOf="@+id/pin_code_layout"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:text="@string/pin_code_information" />

		<android.support.design.widget.TextInputLayout
...
